# limbiq

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/cartographer/: SKILL.md
.claude/skills/developer/: SKILL.md
.github/workflows/: publish.yml  test.yml
docs/: ARCHITECTURE.md  DEPENDENCIES.md  limbiq-architecture.excalidraw
limbiq/: __init__.py  core.py  encoder.py  encoder_training.py  llm.py  model_router.py  onboarding.py  search.py  tools.py  types.py
limbiq/compression/: compressor.py
limbiq/context/: builder.py
limbiq/detection/: detector.py  patterns.py
limbiq/graph/: __init__.py  encoder.py  entities.py  entity_state.py  gnn.py  inference.py  pattern_completion.py  propagation.py  query.py  reasoning.py  store.py
limbiq/hallucination/: __init__.py  detector.py  grounding.py  verifier.py
limbiq/playground/: __init__.py  __main__.py  api.py  data_models.py  instrumentation.py  server.py
limbiq/retrieval/: activation_retrieval.py
limbiq/signals/: __init__.py  acetylcholine.py  base.py  dopamine.py  gaba.py  norepinephrine.py  serotonin.py
limbiq/steering/: __init__.py  __main__.py  bridge.py  evaluator.py  extractor.py  inference.py  library.py
limbiq/store/: cluster_store.py  embeddings.py  memory_store.py  rule_store.py  signal_log.py
mcp-server/: .gitignore  README.md  server.py
tests/: conftest.py  test_acetylcholine.py  test_bridge.py  test_context.py  test_core.py  test_detection.py  test_dopamine.py  test_entity_state.py  test_extraction.py  test_extraction_traps.py  test_gaba.py  test_graph.py  test_hallucination.py  test_implicit_knowledge.py  test_limbiq_encoder.py  test_norepinephrine.py  test_search.py  test_serotonin.py  test_sprint2_retrieval.py  test_steering.py  test_store.py
(+3 files in other folders)
