[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limbiq"
version = "0.5.3"
description = "Neurotransmitter-inspired adaptive learning layer for LLMs"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Dimuthu", email = "dimuthu@example.com"},
]
keywords = ["llm", "memory", "adaptive-learning", "neurotransmitter", "context"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "sentence-transformers>=2.2.0",
    "numpy>=1.24.0",
    "spacy>=3.5.0",
    "faiss-cpu>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
playground = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
]
faiss = [
    "faiss-cpu>=1.7.0",
]
steering-mlx = [
    "mlx>=0.5.0",
    "mlx-lm>=0.4.0",
]
steering-llama = [
    "llama-cpp-python>=0.2.0",
]

[project.urls]
Homepage = "https://github.com/deBilla/limbiq"
Repository = "https://github.com/deBilla/limbiq"
Issues = "https://github.com/deBilla/limbiq/issues"

[tool.setuptools.packages.find]
include = ["limbiq*"]

[tool.setuptools.package-data]
limbiq = ["py.typed"]

[tool.setuptools.exclude-package-data]
"*" = ["*.db", "*.npy", "*.faiss", "*.faiss_map.json", ".DS_Store"]

[tool.pytest.ini_options]
testpaths = ["tests"]
